# repomind

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/specs/: 2026-07-20-repomind-design.md
src/repomind/: __init__.py  _compat.py  ask.py  cli.py  doctor.py  llm.py  memory.py  scanner.py  tui.py  writer.py
tests/: test_ask.py  test_core.py  test_doctor.py  test_tui.py
