[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomind"
version = "0.4.0"
description = "Repo memory & AGENTS.md maintainer CLI for AI coding agents (Linux-first)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lifuheng0271-bit" }]
keywords = ["ai", "agents", "cli", "agents-md", "project-memory"]
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]
ui = ["textual>=0.80"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "textual>=0.80"]

[project.scripts]
repomind = "repomind.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repomind"]
